--- a/testing.html
+++ b/testing.html
@@ -66,7 +66,7 @@
             <div class="line2"></div>
             <div class="content">
                 <p><a href="" class="close">Close</a></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque nulla non adipiscing aliquet. Sed sit amet justo lobortis, porttitor dui vitae, ultricies sapien. Vestibulum tincidunt ac urna non accumsan. Morbi sed metus varius nulla feugiat scelerisque. Cras id lorem quis libero euismod pretium. Duis in faucibus nisl. Sed a malesuada elit, in tristique diam. Mauris non risus non nibh sodales condimentum.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque nulla non adipiscing aliquet. Sed sit amet justo lobortis, porttitor dui vitae, ultricies sapien. Vestibulum tincidunt ac urna non accumsan. Morbi sed metus varius nulla feugiat scelerisque. Cras id lorem quis libero euismod pretium. Duis in faucibus nisl. Sed a malesuada elit, in tristique diam. Mauris non risus non nibh sodales condimentum. Vestibulum tincidunt ac urna non accumsan. Morbi sed metus varius nulla feugiat scelerisque. Cras id lorem quis libero euismod pretium. Duis in faucibus nisl. Sed a malesuada elit, in tristique diam. Mauris non risus non nibh sodales condimentum.</p>
             </div>
         </section>
         
