styling and tweaking for use on nora

--- a/testing.html
+++ b/testing.html
@@ -31,7 +31,8 @@
 				<div class="line2"></div>
 				<div class="content">
 					<p><a href="" class="close">Close</a></p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque nulla non adipiscing aliquet. Sed sit amet justo lobortis, porttitor dui vitae, ultricies sapien. Vestibulum tincidunt ac urna non accumsan. Morbi sed metus varius nulla feugiat scelerisque. Cras id lorem quis libero euismod pretium. Duis in faucibus nisl. Sed a malesuada elit, in tristique diam. Mauris non risus non nibh sodales condimentum.</p>
+					<h3>Retail Space Facing Orange Ave.</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque nulla non adipiscing aliquet. Sed sit amet justo lobortis, porttitor dui vitae, ultricies sapien. Vestibulum tincidunt ac urna non accumsan. Morbi sed metus varius nulla feugiat scelerisque. Cras id lorem quis libero euismod pretium. Duis in faucibus nisl.</p>
 				</div>
 			</section>
 
@@ -43,7 +44,8 @@
 				<div class="line2"></div>
 				<div class="content">
 					<p><a href="" class="close">Close</a></p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque nulla non adipiscing aliquet. Sed sit amet justo lobortis, porttitor dui vitae, ultricies sapien. Vestibulum tincidunt ac urna non accumsan. Morbi sed metus varius nulla feugiat scelerisque. Cras id lorem quis libero euismod pretium. Duis in faucibus nisl. Sed a malesuada elit, in tristique diam. Mauris non risus non nibh sodales condimentum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque nulla non adipiscing aliquet. Sed sit amet justo lobortis, porttitor dui vitae, ultricies sapien. Vestibulum tincidunt ac urna non accumsan. Morbi sed metus varius nulla feugiat scelerisque. Cras id lorem quis libero euismod pretium. Duis in faucibus nisl. Sed a malesuada elit, in tristique diam. Mauris non risus non nibh sodales condimentum.</p>
+					<h3>Retail Space Facing Orange Ave.</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque nulla non adipiscing aliquet. Sed sit amet justo lobortis, porttitor dui vitae, ultricies sapien. Vestibulum tincidunt ac urna non accumsan. Morbi sed metus varius nulla feugiat scelerisque. Cras id lorem quis libero euismod pretium. Duis in faucibus nisl. Sed a malesuada elit, in tristique diam.</p>
 				</div>
 			</section>
 
@@ -55,11 +57,12 @@
 				<div class="line2"></div>
 				<div class="content">
 					<p><a href="" class="close">Close</a></p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque nulla non adipiscing aliquet. Sed sit amet justo lobortis, porttitor dui vitae, ultricies sapien. Vestibulum tincidunt ac urna non accumsan. Morbi sed metus varius nulla feugiat scelerisque. Cras id lorem quis libero euismod pretium. Duis in faucibus nisl. Sed a malesuada elit, in tristique diam. Mauris non risus non nibh sodales condimentum. Cras id lorem quis libero euismod pretium. Duis in faucibus nisl. Sed a malesuada elit, in tristique diam. Mauris non risus non nibh sodales condimentum.</p>
+					<h3>Retail Space Facing Orange Ave.</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque nulla non adipiscing aliquet. Sed sit amet justo lobortis, porttitor dui vitae, ultricies sapien. Vestibulum tincidunt ac urna non accumsan. Morbi sed metus varius nulla feugiat scelerisque. Cras id lorem quis libero euismod pretium. Duis in faucibus nisl.</p>
 				</div>
 			</section>
 
-			<section id="section4">
+			<!-- <section id="section4">
 				<div class="marker" id="marker4">
 					<p>Click me</p>
 				</div>
@@ -69,7 +72,7 @@
 					<p><a href="" class="close">Close</a></p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque nulla non adipiscing aliquet. Sed sit amet justo lobortis, porttitor dui vitae, ultricies sapien. Vestibulum tincidunt ac urna non accumsan. Morbi sed metus varius nulla feugiat scelerisque. Cras id lorem quis libero euismod pretium. Duis in faucibus nisl. Sed a malesuada elit, in tristique diam. Mauris non risus non nibh sodales condimentum. Mauris non risus non nibh sodales condimentum.</p>
 				</div>
-			</section>
+			</section> -->
 		</main><!-- end container -->
 
 </body>
