tweaking to allow for an image

--- a/testing.html
+++ b/testing.html
@@ -30,8 +30,9 @@
 				<div class="line1"></div>
 				<div class="line2"></div>
 				<div class="content">
+					<img class="content-image" src="nora.jpg" />
 					<p><a href="" class="close">Close</a></p>
-					<h3>Retail Space Facing Orange Ave.</h3>
+					<h3>All Sorts of Nearby Things to Enjoy, Woo!</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque nulla non adipiscing aliquet. Sed sit amet justo lobortis, porttitor dui vitae, ultricies sapien. Vestibulum tincidunt ac urna non accumsan. Morbi sed metus varius nulla feugiat scelerisque. Cras id lorem quis libero euismod pretium. Duis in faucibus nisl.</p>
 				</div>
 			</section>
@@ -43,6 +44,7 @@
 				<div class="line1"></div>
 				<div class="line2"></div>
 				<div class="content">
+					<img class="content-image" src="nora.jpg" />
 					<p><a href="" class="close">Close</a></p>
 					<h3>Retail Space Facing Orange Ave.</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque nulla non adipiscing aliquet. Sed sit amet justo lobortis, porttitor dui vitae, ultricies sapien. Vestibulum tincidunt ac urna non accumsan. Morbi sed metus varius nulla feugiat scelerisque. Cras id lorem quis libero euismod pretium. Duis in faucibus nisl. Sed a malesuada elit, in tristique diam.</p>
@@ -56,8 +58,9 @@
 				<div class="line1"></div>
 				<div class="line2"></div>
 				<div class="content">
+					<img class="content-image" src="nora.jpg" />
 					<p><a href="" class="close">Close</a></p>
-					<h3>Retail Space Facing Orange Ave.</h3>
+					<h3>Awesome Cuisine Right Next Door</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque nulla non adipiscing aliquet. Sed sit amet justo lobortis, porttitor dui vitae, ultricies sapien. Vestibulum tincidunt ac urna non accumsan. Morbi sed metus varius nulla feugiat scelerisque. Cras id lorem quis libero euismod pretium. Duis in faucibus nisl.</p>
 				</div>
 			</section>
@@ -69,6 +72,7 @@
 				<div class="line1"></div>
 				<div class="line2"></div>
 				<div class="content">
+					<img class="content-image" src="nora.jpg" />
 					<p><a href="" class="close">Close</a></p>
 					<h3>Retail Space Facing Orange Ave.</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque nulla non adipiscing aliquet. Sed sit amet justo lobortis, porttitor dui vitae, ultricies sapien. Vestibulum tincidunt ac urna non accumsan. Morbi sed metus varius nulla feugiat scelerisque. Cras id lorem quis libero euismod pretium. Duis in faucibus nisl. Sed a malesuada elit, in tristique diam. Mauris non risus non nibh sodales condimentum. Mauris non risus non nibh sodales condimentum.</p>
@@ -82,6 +86,7 @@
 				<div class="line1"></div>
 				<div class="line2"></div>
 				<div class="content">
+					<img class="content-image" src="nora.jpg" />
 					<p><a href="" class="close">Close</a></p>
 					<h3>Retail Space Facing Orange Ave.</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque nulla non adipiscing aliquet. Sed sit amet justo lobortis, porttitor dui vitae, ultricies sapien. Vestibulum tincidunt ac urna non accumsan. Morbi sed metus varius nulla feugiat scelerisque. Cras id lorem quis libero euismod pretium. Duis in faucibus nisl. Sed a malesuada elit, in tristique diam. Mauris non risus non nibh sodales condimentum. Mauris non risus non nibh sodales condimentum.</p>
