Adding fonts and styles to see how it'll look

--- a/testing.html
+++ b/testing.html
@@ -31,9 +31,9 @@
 				<div class="line2"></div>
 				<div class="content">
 					<img class="content-image" src="nora.jpg" />
-					<p><a href="" class="close">Close</a></p>
-					<h3>All Sorts of Nearby Things to Enjoy, Woo!</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque nulla non adipiscing aliquet. Sed sit amet justo lobortis, porttitor dui vitae, ultricies sapien. Vestibulum tincidunt ac urna non accumsan. Morbi sed metus varius nulla feugiat scelerisque. Cras id lorem quis libero euismod pretium. Duis in faucibus nisl.</p>
+					<p><a href="" class="close">X</a></p>
+					<h3>All Sorts of Nearby Things to Enjoy</h3>
+					<p>Wow. Much food. Such shops. Many doge. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque nulla non adipiscing alquet. Sed sit amet justo lobortis, porttitor dui vitae, ultricies sapien. Vestibulum tincidunt ac urna non accumsan.</p>
 				</div>
 			</section>
 
@@ -45,9 +45,9 @@
 				<div class="line2"></div>
 				<div class="content">
 					<img class="content-image" src="nora.jpg" />
-					<p><a href="" class="close">Close</a></p>
+					<p><a href="" class="close">X</a></p>
 					<h3>Retail Space Facing Orange Ave.</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque nulla non adipiscing aliquet. Sed sit amet justo lobortis, porttitor dui vitae, ultricies sapien. Vestibulum tincidunt ac urna non accumsan. Morbi sed metus varius nulla feugiat scelerisque. Cras id lorem quis libero euismod pretium. Duis in faucibus nisl. Sed a malesuada elit, in tristique diam.</p>
+					<p>Wow. Much food. Such shops. Many doge. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque nulla non adipiscing alquet. Sed sit amet justo lobortis, porttitor dui vitae, ultricies sapien. Vestibulum tincidunt ac urna non accumsan.</p>
 				</div>
 			</section>
 
@@ -59,9 +59,9 @@
 				<div class="line2"></div>
 				<div class="content">
 					<img class="content-image" src="nora.jpg" />
-					<p><a href="" class="close">Close</a></p>
+					<p><a href="" class="close">X</a></p>
 					<h3>Awesome Cuisine Right Next Door</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque nulla non adipiscing aliquet. Sed sit amet justo lobortis, porttitor dui vitae, ultricies sapien. Vestibulum tincidunt ac urna non accumsan. Morbi sed metus varius nulla feugiat scelerisque. Cras id lorem quis libero euismod pretium. Duis in faucibus nisl.</p>
+					<p>Wow. Much food. Such shops. Many doge. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque nulla non adipiscing alquet. Sed sit amet justo lobortis, porttitor dui vitae, ultricies sapien. Vestibulum tincidunt ac urna non accumsan.</p>
 				</div>
 			</section>
 
@@ -73,9 +73,9 @@
 				<div class="line2"></div>
 				<div class="content">
 					<img class="content-image" src="nora.jpg" />
-					<p><a href="" class="close">Close</a></p>
+					<p><a href="" class="close">X</a></p>
 					<h3>Retail Space Facing Orange Ave.</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque nulla non adipiscing aliquet. Sed sit amet justo lobortis, porttitor dui vitae, ultricies sapien. Vestibulum tincidunt ac urna non accumsan. Morbi sed metus varius nulla feugiat scelerisque. Cras id lorem quis libero euismod pretium. Duis in faucibus nisl. Sed a malesuada elit, in tristique diam. Mauris non risus non nibh sodales condimentum. Mauris non risus non nibh sodales condimentum.</p>
+					<p>Wow. Much food. Such shops. Many doge. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque nulla non adipiscing alquet. Sed sit amet justo lobortis, porttitor dui vitae, ultricies sapien. Vestibulum tincidunt ac urna non accumsan.</p>
 				</div>
 			</section>
           
@@ -87,9 +87,9 @@
 				<div class="line2"></div>
 				<div class="content">
 					<img class="content-image" src="nora.jpg" />
-					<p><a href="" class="close">Close</a></p>
+					<p><a href="" class="close">X</a></p>
 					<h3>Retail Space Facing Orange Ave.</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque nulla non adipiscing aliquet. Sed sit amet justo lobortis, porttitor dui vitae, ultricies sapien. Vestibulum tincidunt ac urna non accumsan. Morbi sed metus varius nulla feugiat scelerisque. Cras id lorem quis libero euismod pretium. Duis in faucibus nisl. Sed a malesuada elit, in tristique diam. Mauris non risus non nibh sodales condimentum. Mauris non risus non nibh sodales condimentum.</p>
+					<p>Wow. Much food. Such shops. Many doge. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur scelerisque nulla non adipiscing alquet. Sed sit amet justo lobortis, porttitor dui vitae, ultricies sapien. Vestibulum tincidunt ac urna non accumsan.</p>
 				</div>
 			</section>
 		</main><!-- end container -->
