--- a/testing.html
+++ b/testing.html
@@ -11,22 +11,14 @@
 
 <script src="functions.js"></script>
 <link rel="stylesheet" type="text/css" href="styles.css">
-
-<link href="http://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.min.css" rel="stylesheet" type="text/css" />
-<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-<script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
-  <meta charset="utf-8">
-  <title>JS Bin</title>
 </head>
 
 <body>
 
 		<main id="container">
 			<div id="overlay"></div>
-			<section id="section1">
-				<div class="marker" id="marker1">
-					<p>Click me</p>
-				</div>
+			<section class="marker-section" id="section1">
+				<div class="marker" id="marker1"></div>
 				<div class="line1"></div>
 				<div class="line2"></div>
 				<div class="content">
@@ -37,10 +29,8 @@
 				</div>
 			</section>
 
-			<section id="section2">
-				<div class="marker" id="marker2">
-					<p>Click me</p>
-				</div>
+			<section class="marker-section" id="section2">
+				<div class="marker" id="marker2"></div>
 				<div class="line1"></div>
 				<div class="line2"></div>
 				<div class="content">
@@ -51,10 +41,8 @@
 				</div>
 			</section>
 
-			<section id="section3">
-				<div class="marker" id="marker3">
-					<p>Click me</p>
-				</div>
+			<section class="marker-section" id="section3">
+				<div class="marker" id="marker3"></div>
 				<div class="line1"></div>
 				<div class="line2"></div>
 				<div class="content">
@@ -65,10 +53,8 @@
 				</div>
 			</section>
 
-			<section id="section4">
-				<div class="marker" id="marker4">
-					<p>Click me</p>
-				</div>
+			<section class="marker-section" id="section4">
+				<div class="marker" id="marker4"></div>
 				<div class="line1"></div>
 				<div class="line2"></div>
 				<div class="content">
@@ -79,10 +65,8 @@
 				</div>
 			</section>
           
-            <section id="section5">
-				<div class="marker" id="marker5">
-					<p>Click me</p>
-				</div>
+            <section class="marker-section" id="section5">
+				<div class="marker" id="marker5"></div>
 				<div class="line1"></div>
 				<div class="line2"></div>
 				<div class="content">
