Adding background to markers

--- a/testing.html
+++ b/testing.html
@@ -17,8 +17,11 @@
 
 		<main id="container">
 			<div id="overlay"></div>
-			<section class="marker-section" id="section1">
-				<div class="marker" id="marker1"></div>
+			
+			<section class="marker-background" id="section1">
+				<div class="marker-border">
+					<div class="marker" id="marker1"></div>
+				</div>
 				<div class="line1"></div>
 				<div class="line2"></div>
 				<div class="content">
@@ -29,8 +32,10 @@
 				</div>
 			</section>
 
-			<section class="marker-section" id="section2">
-				<div class="marker" id="marker2"></div>
+			<section class="marker-background" id="section2">
+				<div class="marker-border">
+					<div class="marker" id="marker2"></div>
+				</div>
 				<div class="line1"></div>
 				<div class="line2"></div>
 				<div class="content">
@@ -41,8 +46,10 @@
 				</div>
 			</section>
 
-			<section class="marker-section" id="section3">
-				<div class="marker" id="marker3"></div>
+			<section class="marker-background" id="section3">
+				<div class="marker-border">
+					<div class="marker" id="marker3"></div>
+				</div>
 				<div class="line1"></div>
 				<div class="line2"></div>
 				<div class="content">
@@ -53,8 +60,10 @@
 				</div>
 			</section>
 
-			<section class="marker-section" id="section4">
-				<div class="marker" id="marker4"></div>
+			<section class="marker-background" id="section4">
+				<div class="marker-border">
+					<div class="marker" id="marker4"></div>
+				</div>
 				<div class="line1"></div>
 				<div class="line2"></div>
 				<div class="content">
@@ -65,8 +74,10 @@
 				</div>
 			</section>
           
-            <section class="marker-section" id="section5">
-				<div class="marker" id="marker5"></div>
+           <section class="marker-background" id="section5">
+		   		<div class="marker-border">
+					<div class="marker" id="marker5"></div>
+				</div>
 				<div class="line1"></div>
 				<div class="line2"></div>
 				<div class="content">
